fix(billings): remove unused account id from lookup
